# Sega-Superstars-Tennis-ReMatch

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  segasuperstarstennisrecomp_config.toml
config/: sst_rematch_func.toml
icon/: icon.res
src/: main.cpp  sst_rematch_app.h
